--- a/todoproject/todoapp/templates/sign.html
+++ b/todoproject/todoapp/templates/sign.html
@@ -68,6 +68,7 @@
                 </div>
                
             </form>
+            <h2 style="color:red;">{{msg}}></h2>
         </div>
     </section>
 </body>
